# jsgtk

./: .editorconfig  .gitignore  README.md  meson.build  package.json  tsconfig.json  typings.json
data/: meson.build
data/typings/: index.d.ts
data/typings/globals/: node.d.ts
data/typings/modules/: Atk-1.0.d.ts  GLib-2.0.d.ts  GObject-2.0.d.ts  Gdk-3.0.d.ts  Gio-2.0.d.ts  Gtk-3.0.d.ts  WebKit2-4.0.d.ts
lib/: constants.js  io.mspencer.JSGtk.runtime.gresource.xml  jsgtk.runtime.gresource.xml  meson.build  polyfills.js  runtime.js
lib/core_modules/: child_process.js  fs.js  process.js
lib/module_loader/: core.js  node.js
lib/template/: main.js  module.js
src/: build.js  index.js  io.mspencer.JSGtk.in  io.mspencer.JSGtk.src.gresource.xml  jsgtk.in  jsgtk.src.gresource.xml  main.js
typer/: convert.ts  generator.ts  girxml.ts  index.ts  render.ts  reserved.ts
